# libgib

./: .gitignore  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY.md  README.md  TODO.md
.github/workflows/: ci.yaml
afnative/: Cargo.toml
afnative/src/: lib.rs  unix.rs  windows.rs
cproxy/: libc-proxy.c
dlrkit/: .gitignore  Cargo.toml  LICENSE-THIRD-PARTY.md  TODO.md
dlrkit/examples/: global-fn-ptr.rs  hello-world.rs  main.rs  sym-by-addr.rs
dlrkit/examples/example-lib/: Cargo.toml
dlrkit/examples/example-lib/src/: lib.rs
dlrkit/src/: lib.rs  unix.rs  windows.rs
examples/aom-dll-hijack/: README.md  install.sh
examples/aom-dll-hijack/aomlib/: Cargo.toml  build.rs  buildtools.rs
examples/aom-dll-hijack/aomlib/.cargo/: config.toml
examples/aom-dll-hijack/aomlib/src/: lib.rs  proxyfunctions.rs
examples/aom-dll-hijack/client/: Cargo.toml
examples/aom-dll-hijack/client/src/: main.rs
examples/aom-dll-hijack/server/: Cargo.toml
examples/aom-dll-hijack/server/src/: lib.rs  testsrv.rs
examples/libcproxy/: Cargo.toml  README.md
examples/libcproxy/src/: lib.rs
mmor/: Cargo.toml
mmor/src/: lib.rs  unix.rs  windows.rs
mrevise/: Cargo.toml
mrevise/src/: lib.rs  unix.rs  windows.rs
src/: lib.rs
src/mem/: mem.rs
