[workspace]
members = [
  "dlrkit",
  "mmor",
  "mrevise" ,
  "afnative",
  "examples/libcproxy",
  "examples/aom-dll-hijack/aomlib",
  "examples/aom-dll-hijack/client",
  "examples/aom-dll-hijack/server",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Stephen Fox Jr. <stephen.j.fox.jr@gmail.com>"]
