[package]
name = "dlrkit"
description = """
dlrkit provides an OS-agnostic library for interacting with the dynamic linker
and dynamically-loaded libraries in Rust with no external dependencies."""
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
example-lib = { path = "examples/example-lib" }
