[package]
name = "dlrkit"
description = """
dlrkit provides an API for interacting with the dynamic linker and loading
libraries at runtime such as .so files and .dll files. Useful for executing
code from external libraries using the C ABI."""
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
example-lib = { path = "examples/example-lib" }
