[package]
name = "mmor"
description = """
mmor provides an OS-agnostic API for enumerating memory-mapped objects
in the current process and resolving a symbol's address to its name
and parent library. Useful for finding the addresses of libraries or
the process' executable, as well as mapping the process global offset
table without hardcoding each entry's offset in the table in
your program."""
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2.171"

[dependencies]
dlrkit = { version = "0.1.0", path = "../dlrkit" }
