[package]
name = "mrevise"
description = """
mrevise abstracts operating on the current process' memory, including:
modifying memory protections (permissions), allocating memory, and
finding byte patterns. This library is a fork of Jacob Read's 'mem'
crate from their Pocket Relay project."""
version = "0.1.0"
edition = "2024"

[dependencies]
