[package]
name = "mrevise"
description = """
mrevise abstracts operating on the current process' memory, including:
modifying memory protections (permissions), allocating memory, and
finding byte patterns. This library is a fork of Jacob Read's 'mem'
crate from their Pocket Relay project."""
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
